--- a/src/Pages/Home/Table/BnawaliTable/BnawaliTableHeader.css
+++ b/src/Pages/Home/Table/BnawaliTable/BnawaliTableHeader.css
@@ -4,8 +4,28 @@
     box-sizing: border-box;
 }
 
+#BanawaliTable_Grid {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-row: auto;
+    grid-column-gap: 10px;
+}
+
+.Banawali_Grid_Left {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin-top: 110px;
+
+    width: 100%;
+}
+
+
 .BanawaliTableHeader_Container {
-    width: 80%;
+    grid-column-start: 4;
+    grid-column-end: 11;
+    width: 100%;
     height: auto;
     padding: 2px;
     margin: 110px auto;
@@ -22,18 +42,46 @@
     color: white;
 }
 
+.Banawali_Grid_Right {
+    grid-column-start: 11;
+    grid-column-end: 12;
+    margin-top: 110px;
+
+}
+
 .CardList_MobileDevice {
     display: none;
 }
 
 @media screen and (min-width:1025px) and (max-width:1200px) {
 
+    #BanawaliTable_Grid {
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-row: auto;
+        grid-column-gap: 10px;
+    }
+
+    .Banawali_Grid_Left {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin-top: 110px;
+
+        width: 100%;
+    }
+
+
     .BanawaliTableHeader_Container {
-        width: 90%;
+        grid-column-start: 4;
+        grid-column-end: 11;
+        width: 100%;
         height: auto;
         padding: 2px;
         margin: 110px auto;
     }
+
 
     #Banawali_AppBar {
         background-color: rgb(115, 140, 136);
@@ -44,6 +92,14 @@
         font-size: 28px;
         font-weight: 600;
         color: white;
+    }
+
+    .Banawali_Grid_Right {
+        grid-column-start: 11;
+        grid-column-end: 12;
+        margin-top: 110px;
+
+        width: 100%;
     }
 
     .CardList_MobileDevice {
@@ -99,7 +155,7 @@
 
 @media screen and (min-width:481px) and (max-width:768px) {
     .BanawaliTableHeader_Container {
-        width: 80%;
+        width: 90%;
         height: auto;
         padding: 2px;
         margin: 110px auto;
