--- a/src/Pages/Home/Table/ChanhujoDaroTable/ChanhujoDaro.css
+++ b/src/Pages/Home/Table/ChanhujoDaroTable/ChanhujoDaro.css
@@ -4,8 +4,26 @@
     box-sizing: border-box;
 }
 
+#ChanhuTable_Grid {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-row: auto;
+    grid-column-gap: 10px;
+}
+
+.Chanhu_Grid_Left {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin-top: 110px;
+
+}
+
 .ChanhujoDaroTableHeader_Container {
-    width: 80%;
+    grid-column-start: 4;
+    grid-column-end: 11;
+    width: 100%;
     height: auto;
     padding: 2px;
     margin: 110px auto;
@@ -22,14 +40,40 @@
     color: white;
 }
 
+.Chanhu_Grid_Right {
+    grid-column-start: 11;
+    grid-column-end: 12;
+    margin-top: 110px;
+
+}
+
 .Chanhu_CardList_MobileDevice {
     display: none;
 }
 
 
 @media screen and (min-width:1025px) and (max-width:1200px) {
+
+    #ChanhuTable_Grid {
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-row: auto;
+        grid-column-gap: 10px;
+    }
+
+    .Chanhu_Grid_Left {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin-top: 110px;
+
+    }
+
     .ChanhujoDaroTableHeader_Container {
-        width: 90%;
+        grid-column-start: 4;
+        grid-column-end: 11;
+        width: 100%;
         height: auto;
         padding: 2px;
         margin: 110px auto;
@@ -44,6 +88,13 @@
         font-size: 28px;
         font-weight: 600;
         color: white;
+    }
+
+    .Chanhu_Grid_Right {
+        grid-column-start: 11;
+        grid-column-end: 12;
+        margin-top: 110px;
+
     }
 
     .Chanhu_CardList_MobileDevice {
