--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -4,10 +4,31 @@
     box-sizing: border-box;
 }
 
-.About_Container {
+
+#AboutTable_Grid {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-row: auto;
+    grid-column-gap: 10px;
+}
+
+.About_Grid_Left {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin-top: 110px;
+    background-color: red;
     width: 100%;
     height: 500px;
-    margin: 110px 0px 0px 0px;
+}
+
+.About_Container {
+    grid-column-start: 4;
+    grid-column-end: 11;
+    width: 100%;
+    height: 500px;
+    margin: 110px auto 0px auto;
     padding-top: 10px;
     box-sizing: border-box;
 
@@ -23,14 +44,14 @@
 }
 
 .About_img_Card {
-    width: 50%;
+    width: 500px;
     height: 380px;
     margin: 10px;
     box-sizing: border-box;
 }
 
 .About_img_Text {
-    width: 50%;
+    width: 500px;
     padding: 10px 15px 25px 10px;
     box-sizing: border-box;
     height: 380px;
@@ -67,6 +88,15 @@
     font-size: 16px;
     cursor: pointer;
     font-weight: 600;
+}
+
+.About_Grid_Right {
+    grid-column-start: 11;
+    grid-column-end: 12;
+    margin-top: 110px;
+    background-color: green;
+    width: 100%;
+    height: 500px;
 }
 
 @media screen and (min-width:1025px) and (max-width:1200px) {
