--- a/src/Pages/Home/Table/EranTable/EranTableHeader.css
+++ b/src/Pages/Home/Table/EranTable/EranTableHeader.css
@@ -507,6 +507,23 @@
 }
 
 @media screen and (min-width:320px) and (max-width:480px) {
+   #EranTable_Grid {
+      width: 100% !important;
+      height: auto;
+      display: block !important;
+   }
+
+
+   .Eran_Grid_Left {
+      display: none;
+
+   }
+
+   .Eran_Grid_Right {
+      display: none;
+
+   }
+
    .EranTableHeader_Container {
       width: 98%;
       height: auto;
