add scroll to top

--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -4,13 +4,30 @@
     box-sizing: border-box;
 }
 
+#ContactTable_Grid {
+    width: 100%;
+    height: auto;
+    padding: 2px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    grid-column-gap: 10px;
+}
+
+.Contact_Grid_Left {
+    grid-column-start: 1;
+    grid-column-end: 4;
+
+}
+
 .Contact_Container {
     width: 100%;
     height: 400px;
     margin: 110px 0px 0px 0px;
     padding-top: 10px;
     box-sizing: border-box;
-
+    grid-column-start: 4;
+    grid-column-end: 11;
 }
 
 .Contact_Main {
@@ -55,6 +72,12 @@
     font-size: 18px;
     font-weight: 500;
     color: #3a3c3e;
+}
+
+.Contact_Grid_Right {
+    grid-column-start: 11;
+    grid-column-end: 12;
+
 }
 
 @media screen and (min-width:1025px) and (max-width:1200px) {
@@ -226,6 +249,23 @@
 }
 
 @media screen and (min-width:320px) and (max-width:480px) {
+    #ContactTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .Contact_Grid_Left {
+        display: none;
+
+    }
+
+    .Contact_Grid_Right {
+        display: none;
+
+    }
+
     .Contact_Container {
         width: 100%;
         height: auto !important;
