--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -18,7 +18,7 @@
     grid-column-start: 1;
     grid-column-end: 4;
     margin-top: 110px;
-    background-color: red;
+
     width: 100%;
     height: 500px;
 }
@@ -28,35 +28,36 @@
     grid-column-end: 11;
     width: 100%;
     height: 500px;
-    margin: 110px auto 0px auto;
-    padding-top: 10px;
+    margin-top: 110px;
+    padding: 10px;
     box-sizing: border-box;
 
 }
 
 .About_Main {
     width: 90%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    margin: 50px auto;
-
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    margin: auto;
+    column-gap: 10px;
+    box-sizing: border-box;
 }
 
 .About_img_Card {
-    width: 500px;
+    width: 100%;
     height: 380px;
     margin: 10px;
     box-sizing: border-box;
 }
 
 .About_img_Text {
-    width: 500px;
+    width: 100%;
     padding: 10px 15px 25px 10px;
-    box-sizing: border-box;
     height: 380px;
     margin: 10px;
-
+    box-sizing: border-box;
 }
 
 .para {
@@ -94,7 +95,7 @@
     grid-column-start: 11;
     grid-column-end: 12;
     margin-top: 110px;
-    background-color: green;
+
     width: 100%;
     height: 500px;
 }
@@ -302,6 +303,23 @@
 }
 
 @media screen and (min-width:320px) and (max-width:480px) {
+    #AboutTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .About_Grid_Left {
+        display: none;
+
+    }
+
+    .About_Grid_Right {
+        display: none;
+
+    }
+
     .About_Container {
         width: 100%;
         height: auto;
