--- a/src/Pages/Home/Table/BNGLTABLE/BnglTableHeader.css
+++ b/src/Pages/Home/Table/BNGLTABLE/BnglTableHeader.css
@@ -8,21 +8,19 @@
    width: 100%;
    height: auto;
    display: grid;
-   grid-template-columns: auto auto auto;
+   grid-template-columns: 3fr 8fr 1fr;
    grid-row: auto;
    grid-column-gap: 10px;
 }
 
 .Bngl_Grid_Left {
-   grid-column-start: 1;
-   grid-column-end: 4;
+
    margin-top: 110px;
 
 }
 
 .BnglTableHeader_Container {
-   grid-column-start: 4;
-   grid-column-end: 11;
+
    width: 100%;
    height: auto;
    padding: 2px;
@@ -41,8 +39,7 @@
 }
 
 .Bngl_Grid_Right {
-   grid-column-start: 11;
-   grid-column-end: 12;
+
    margin-top: 110px;
 
 }
@@ -76,10 +73,27 @@
 }
 
 @media screen and (min-width:769px) and (max-width:1024px) {
-   .BnglTableHeader_Container {
-      width: 80%;
+   #BnglTable_Grid {
+      width: 100% !important;
       height: auto;
-      padding: 2px;
+      display: block !important;
+   }
+
+
+   .Bngl_Grid_Left {
+      display: none;
+
+   }
+
+   .Bngl_Grid_Right {
+      display: none;
+
+   }
+
+   .BnglTableHeader_Container {
+      width: 100%;
+      height: auto;
+      padding: 10px;
       margin: 110px auto;
    }
 
@@ -91,12 +105,12 @@
 
    .Bngl_CardList_MobileDevice {
       width: 80%;
-      display: block;
+      display: none;
       margin: 15px auto;
    }
 
    .Bngl_TableList_LargeDevice {
-      display: none;
+      display: block;
    }
 
    .Bngl_Card_Mobile {
@@ -128,6 +142,22 @@
 
 
 @media screen and (min-width:481px) and (max-width:768px) {
+   #BnglTable_Grid {
+      width: 100% !important;
+      height: auto;
+      display: block !important;
+   }
+
+
+   .Bngl_Grid_Left {
+      display: none;
+
+   }
+
+   .Bngl_Grid_Right {
+      display: none;
+
+   }
 
    .BnglTableHeader_Container {
       width: 90%;
