--- a/src/Pages/Home/Table/BhirranaTable/BhirranaTableHeader.css
+++ b/src/Pages/Home/Table/BhirranaTable/BhirranaTableHeader.css
@@ -8,21 +8,19 @@
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 3fr 8fr 1fr;
     grid-row: auto;
     grid-column-gap: 10px;
 }
 
 .Bhirrana_Grid_Left {
-    grid-column-start: 1;
-    grid-column-end: 4;
+
     margin-top: 110px;
 
 }
 
 .BhirranaTableHeader_Container {
-    grid-column-start: 4;
-    grid-column-end: 11;
+
     width: 100%;
     height: auto;
     padding: 2px;
@@ -42,8 +40,7 @@
 }
 
 .Bhirrana_Grid_Right {
-    grid-column-start: 11;
-    grid-column-end: 12;
+
     margin-top: 110px;
 
 }
@@ -107,11 +104,27 @@
 }
 
 @media screen and (min-width:769px) and (max-width:1024px) {
+    #BhirranaTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .Bhirrana_Grid_Left {
+        display: none;
+
+    }
+
+    .Bhirrana_Grid_Right {
+        display: none;
+
+    }
 
     .BhirranaTableHeader_Container {
-        width: 80%;
+        width: 100%;
         height: auto;
-        padding: 2px;
+        padding: 10px;
         margin: 110px auto;
     }
 
@@ -123,12 +136,12 @@
 
     .Bhirrana_CardList_MobileDevice {
         width: 80%;
-        display: block;
+        display: none;
         margin: 15px auto;
     }
 
     .Bhirrana_TableList_LargeDevice {
-        display: none;
+        display: block;
     }
 
     .Bhirrana_Card_Mobile {
@@ -159,6 +172,22 @@
 }
 
 @media screen and (min-width:481px) and (max-width:768px) {
+    #BhirranaTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .Bhirrana_Grid_Left {
+        display: none;
+
+    }
+
+    .Bhirrana_Grid_Right {
+        display: none;
+
+    }
 
     .BhirranaTableHeader_Container {
         width: 90%;
@@ -212,6 +241,22 @@
 
 
 @media screen and (min-width:320px) and (max-width:480px) {
+    #BhirranaTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .Bhirrana_Grid_Left {
+        display: none;
+
+    }
+
+    .Bhirrana_Grid_Right {
+        display: none;
+
+    }
 
     .BhirranaTableHeader_Container {
         width: 98%;
