--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -9,24 +9,18 @@
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 3fr 8fr 1fr;
     grid-row: auto;
     grid-column-gap: 10px;
 }
 
 .About_Grid_Left {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin-top: 110px;
 
-    width: 100%;
+    margin-top: 110px;
     height: 500px;
 }
 
 .About_Container {
-    grid-column-start: 4;
-    grid-column-end: 11;
-    width: 100%;
     height: 500px;
     margin-top: 110px;
     padding: 10px;
@@ -35,7 +29,7 @@
 }
 
 .About_Main {
-    width: 90%;
+    width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -43,12 +37,12 @@
     margin: auto;
     column-gap: 10px;
     box-sizing: border-box;
+    padding-top: 10px;
 }
 
 .About_img_Card {
     width: 100%;
     height: 380px;
-    margin: 10px;
     box-sizing: border-box;
 }
 
@@ -56,7 +50,7 @@
     width: 100%;
     padding: 10px 15px 25px 10px;
     height: 380px;
-    margin: 10px;
+    border-radius: 8px;
     box-sizing: border-box;
 }
 
@@ -92,11 +86,8 @@
 }
 
 .About_Grid_Right {
-    grid-column-start: 11;
-    grid-column-end: 12;
-    margin-top: 110px;
 
-    width: 100%;
+    margin-top: 110px;
     height: 500px;
 }
 
@@ -235,6 +226,23 @@
 }
 
 @media screen and (min-width:481px) and (max-width:768px) {
+    #AboutTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .About_Grid_Left {
+        display: none;
+
+    }
+
+    .About_Grid_Right {
+        display: none;
+
+    }
+
     .About_Container {
         width: 100%;
         height: auto;
