--- a/src/Pages/Home/Table/GawaliorTableHeader.css
+++ b/src/Pages/Home/Table/GawaliorTableHeader.css
@@ -8,21 +8,20 @@
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 3fr 8fr 1fr;
     grid-row: auto;
     grid-column-gap: 10px;
 }
 
 .Gawalior_Grid_Left {
-    grid-column-start: 1;
-    grid-column-end: 4;
+
     margin-top: 110px;
+    height: auto;
 
 }
 
 .GawaliorTableHeader_Container {
-    grid-column-start: 4;
-    grid-column-end: 11;
+
     height: auto;
     padding: 2px;
     margin: 110px auto;
@@ -51,9 +50,9 @@
 }
 
 .Gawalior_Grid_Right {
-    grid-column-start: 11;
-    grid-column-end: 12;
+
     margin-top: 110px;
+    height: auto;
 }
 
 .Gawalior_CardList_MobileDevice {
@@ -122,6 +121,22 @@
 
 
 @media screen and (min-width:769px) and (max-width:1024px) {
+    #GawaliorTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .Gawalior_Grid_Left {
+        display: none;
+
+    }
+
+    .Gawalior_Grid_Right {
+        display: none;
+
+    }
 
     #GawaliorTable_Grid {
         width: 100%;
@@ -130,6 +145,7 @@
         grid-template-columns: auto auto auto;
         grid-row: auto;
         grid-column-gap: 10px;
+        padding: 10px;
     }
 
     .Gawalior_Grid_Left {
@@ -182,6 +198,23 @@
 
 
 @media screen and (min-width:481px) and (max-width:768px) {
+    #GawaliorTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .Gawalior_Grid_Left {
+        display: none;
+
+    }
+
+    .Gawalior_Grid_Right {
+        display: none;
+
+    }
+
     .GawaliorTableHeader_Container {
         width: 80%;
         height: auto;
