--- a/src/Pages/HowToUse/HowToUse.css
+++ b/src/Pages/HowToUse/HowToUse.css
@@ -8,36 +8,34 @@
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-columns: auto auto auto !important;
+    grid-template-columns: 3fr 8fr 1fr;
     grid-row: auto;
     grid-column-gap: 10px;
     box-sizing: border-box;
 }
 
 .HowToUse_Grid_Left {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin-top: 110px;
 
+    margin-top: 110px;
+    height: 500px;
 }
 
 .HowToUse_Container {
-    grid-column-start: 4;
-    grid-column-end: 11;
     width: 100%;
     height: auto;
     margin: 110px 0px 0px 0px;
-    padding-top: 10px;
+    padding: 10px;
     box-sizing: border-box;
 
 
 }
 
 .HowToUse_Heading_Below {
-    width: 80%;
+    width: 100%;
     height: auto;
     margin: 20px auto;
     box-sizing: border-box;
+    padding: 10px;
 }
 
 .HowToUse_Heading_Below>p {
@@ -48,11 +46,10 @@
 }
 
 .HowToUse_Accordion {
-    width: 80%;
+    width: 100%;
     height: auto;
     margin: 30px auto;
     box-sizing: border-box;
-
     padding: 10px;
 }
 
@@ -75,11 +72,10 @@
 }
 
 .HowToUse_Grid_Right {
-    grid-column-start: 11 !important;
-    grid-column-end: 12 !important;
-    margin-top: 110px !important;
 
-    width: 100%;
+    margin-top: 110px;
+
+
     height: 400px;
 }
 
@@ -139,6 +135,22 @@
 }
 
 @media screen and (min-width:769px) and (max-width:1024px) {
+    #HowToUseTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .HowToUse_Grid_Left {
+        display: none;
+
+    }
+
+    .HowToUse_Grid_Right {
+        display: none;
+
+    }
 
     .HowToUse_Container {
         width: 100%;
@@ -193,6 +205,22 @@
 }
 
 @media screen and (min-width:481px) and (max-width:768px) {
+    #HowToUseTable_Grid {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+    }
+
+
+    .HowToUse_Grid_Left {
+        display: none;
+
+    }
+
+    .HowToUse_Grid_Right {
+        display: none;
+
+    }
 
     .HowToUse_Container {
         width: 100%;
@@ -267,16 +295,17 @@
         width: 100%;
         height: auto;
         margin: 110px 0px 0px 0px;
-        padding-top: 10px;
+        padding: 10px;
         box-sizing: border-box;
 
     }
 
     .HowToUse_Heading_Below {
-        width: 80%;
+        width: 90%;
         height: auto;
         margin: 20px auto;
         box-sizing: border-box;
+        padding: 10px;
     }
 
     .HowToUse_Heading_Below>p {
@@ -284,6 +313,7 @@
         font-weight: 600;
         color: #3a3c3e;
         line-height: 26px;
+
     }
 
     .HowToUse_Accordion {
@@ -291,7 +321,6 @@
         height: auto;
         margin: 30px auto;
         box-sizing: border-box;
-
         padding: 10px;
     }
 
