add font change

--- a/src/Componets/Footer/Footer.css
+++ b/src/Componets/Footer/Footer.css
@@ -64,7 +64,7 @@
 }
 
 h3 {
-    color: #c74126;
+    color: #e14b2c;
     font-size: 15px;
     font-weight: 600;
 }
@@ -168,7 +168,7 @@ h3 {
     }
 
     h3 {
-        color: #c74126;
+        color: #e14b2c;
         font-size: 15px;
         font-weight: 600;
     }
@@ -273,7 +273,7 @@ h3 {
     }
 
     h3 {
-        color: #c74126;
+        color: #e14b2c;
         font-size: 15px;
         font-weight: 600;
     }
@@ -380,7 +380,7 @@ h3 {
     }
 
     h3 {
-        color: #c74126;
+        color: #e14b2c;
         font-size: 15px;
         font-weight: 600;
     }
@@ -592,10 +592,11 @@ h3 {
         align-items: end;
 
 
+
     }
 
     h3 {
-        color: #c74126;
+        color: #e14b2c;
         font-size: 15px;
         font-weight: 600;
     }
