--- a/src/Componets/Navbar/Navbar.css
+++ b/src/Componets/Navbar/Navbar.css
@@ -42,7 +42,7 @@
 .Navbar_Left_Side>h3 {
     font-weight: 600;
     font-size: 18px;
-    color: #c74126;
+    color: #eb846f;
 }
 
 .Navbar_Right_Side {
@@ -61,7 +61,7 @@
     text-decoration: none;
     padding-left: 15px;
     padding-right: 5px;
-    color: #c74126;
+    color: #eb846f;
     font-size: 18px;
     font-weight: 600;
 }
@@ -96,7 +96,7 @@
     .Navbar_Left_Side>h3 {
         font-weight: 600;
         font-size: 22px;
-        color: #c74126;
+        color: #eb846f;
     }
 
     .Navbar_Right_Side {
@@ -115,7 +115,7 @@
         text-decoration: none;
         padding-left: 15px;
         padding-right: 5px;
-        color: #c74126;
+        color: #eb846f;
         font-size: 22px;
         font-weight: 600;
     }
@@ -151,7 +151,7 @@
     .Navbar_Left_Side>h3 {
         font-weight: 600;
         font-size: 16px;
-        color: #c74126;
+        color: #eb846f;
     }
 
     .Navbar_Right_Side {
@@ -171,7 +171,7 @@
         text-decoration: none;
         padding-left: 15px;
         padding-right: 5px;
-        color: #c74126;
+        color: #eb846f;
         font-size: 16px;
         font-weight: 600;
     }
@@ -208,7 +208,7 @@
     .Navbar_Left_Side>h3 {
         font-weight: 600;
         font-size: 22px;
-        color: #c74126;
+        color: #eb846f;
     }
 
 
@@ -237,7 +237,7 @@
         text-decoration: none;
         padding-left: 15px;
         padding-right: 5px;
-        color: #c74126;
+        color: #eb846f;
         font-size: 35px;
         font-weight: 600;
     }
@@ -251,7 +251,7 @@
         display: block !important;
         font-size: 25px;
         font-weight: 600;
-        color: #c74126;
+        color: #eb846f;
         cursor: pointer !important;
     }
 
@@ -260,7 +260,7 @@
         position: absolute;
         top: 2.5rem;
         right: 1rem;
-        color: #c74126;
+        color: #eb846f;
         font-size: 28px;
         font-weight: 600;
         cursor: pointer;
@@ -296,7 +296,7 @@
     .Navbar_Left_Side>h3 {
         font-weight: 600;
         font-size: 18px;
-        color: #c74126;
+        color: #eb846f;
     }
 
     .Navbar_Right_Side {
@@ -324,7 +324,7 @@
         text-decoration: none;
         padding-left: 15px;
         padding-right: 5px;
-        color: #c74126;
+        color: #eb846f;
         font-size: 30px;
         font-weight: 600;
     }
@@ -337,7 +337,7 @@
         display: block !important;
         font-size: 25px;
         font-weight: 600;
-        color: #c74126;
+        color: #eb846f;
         cursor: pointer !important;
     }
 
@@ -346,7 +346,7 @@
         position: absolute;
         top: 2.5rem;
         right: 1rem;
-        color: #c74126;
+        color: #eb846f;
         font-size: 28px;
         font-weight: 600;
     }
