--- a/src/Pages/Home/ThirdImage/ThirdImage.css
+++ b/src/Pages/Home/ThirdImage/ThirdImage.css
@@ -24,7 +24,7 @@
 }
 
 .ThirdImage_Section>p>span {
-    color: #f42d06;
+    color: #e14b2c;
     font-weight: 900;
 }
 
@@ -49,7 +49,7 @@
     }
 
     .ThirdImage_Section>p>span {
-        color: #f42d06;
+        color: #e14b2c;
         font-weight: 900;
     }
 
@@ -76,7 +76,7 @@
     }
 
     .ThirdImage_Section>p>span {
-        color: #f42d06;
+        color: #e14b2c;
         font-weight: 900;
     }
 
@@ -103,7 +103,7 @@
     }
 
     .ThirdImage_Section>p>span {
-        color: #f42d06;
+        color: #e14b2c;
         font-weight: 900;
     }
 }
@@ -129,7 +129,7 @@
     }
 
     .ThirdImage_Section>p>span {
-        color: #f42d06;
+        color: #e14b2c;
         font-weight: 900;
     }
 }
