--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&display=swap'); */
 
+@font-face {
+  font-family: 'georgia';
+  src: url(./Fonts/georgia.ttf);
+}
 
 body,
 .app {
   margin: 0;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: Georgia, Times, 'Times New Roman', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: 'Roboto Condensed', sans-serif;
 }
