--- a/src/Pages/Home/SecondImage/SecondImage.css
+++ b/src/Pages/Home/SecondImage/SecondImage.css
@@ -29,11 +29,14 @@
 }
 
 .SecondImage_Section_Left>p {
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 1.6rem;
+    font-weight: 500;
     margin: 10px;
     text-align: left;
     color: white;
+    font-variant: small-caps;
+    letter-spacing: 5px;
+    line-height: 1.5;
 }
 
 .SecondImage_Section_Right {
@@ -96,11 +99,14 @@
     }
 
     .SecondImage_Section_Left>p {
-        font-size: 30px;
-        font-weight: 600;
+        font-size: 1.6rem;
+        font-weight: 500;
         margin: 10px;
         text-align: left;
         color: white;
+        font-variant: small-caps;
+        letter-spacing: 5px;
+        line-height: 1.5;
     }
 
     .SecondImage_Section_Right {
@@ -165,11 +171,15 @@
     }
 
     .SecondImage_Section_Left>p {
-        font-size: 30px;
-        font-weight: 600;
+        font-size: 1.6rem;
+        font-weight: 500;
         margin: 10px;
         text-align: left;
         color: white;
+        font-variant: small-caps;
+        letter-spacing: 5px;
+        line-height: 1.5;
+        ;
     }
 
     .SecondImage_Section_Right {
@@ -233,11 +243,14 @@
     }
 
     .SecondImage_Section_Left>p {
-        font-size: 30px;
-        font-weight: 600;
-        margin-top: 20px;
+        font-size: 1.6rem;
+        font-weight: 500;
+        margin: 10px;
         text-align: left;
         color: white;
+        font-variant: small-caps;
+        letter-spacing: 5px;
+        line-height: 1.5;
     }
 
     .SecondImage_Section_Right {
@@ -301,11 +314,14 @@
     }
 
     .SecondImage_Section_Left>p {
-        font-size: 30px;
-        font-weight: 600;
-        margin-top: 20px;
+        font-size: 1.6rem;
+        font-weight: 500;
+        margin: 20px;
         text-align: left;
         color: white;
+        font-variant: small-caps;
+        letter-spacing: 5px;
+        line-height: 1.5;
     }
 
     .SecondImage_Section_Right {
