--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&display=swap'); */
-
-@font-face {
-  font-family: 'georgia';
-  src: url(./Fonts/georgia.ttf);
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;1,100;1,200&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 body,
 .app {
   margin: 0;
-  font-family: Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
